--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,13 @@
 body {
   margin: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #20232a;
 }
 
 canvas {
   display: block;
-  width: 100vw;
-  height: 100vh;
 }
